force-app/main/default/objects/OW_business_configuration__c/OW_business_configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Business configuration custom setting to be phased out and superseded by BusinessConfiguration__c. Holds settings for a variety of processes across the organisation like lead times for key processes that are referenced in automation and validation across Salesforce.</description>
    <label>Business configuration (legacy)</label>
</CustomObject>