force-app/main/default/objects/OW_business_configuration__c/fields/DeploymentMode__c.field-meta.xml
<CustomField>
    <fullName>DeploymentMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In deployment mode</description>
    <inlineHelpText>If true, a number of system restrictions will be applied, particularly to prevent the editing of data, while deployment activity is happening.</inlineHelpText>
    <label>Deployment Mode</label>
    <type>Checkbox</type>
</CustomField>