force-app/main/default/objects/OW_business_configuration__c/fields/IsaGiaRegularDay__c.field-meta.xml
<CustomField>
    <fullName>IsaGiaRegularDay__c</fullName>
    <defaultValue>18</defaultValue>
    <description>This is the day of the month upon which ISA or GIA regulars are taken form client bank accounts.</description>
    <label>ISA/GIA regular day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>