force-app/main/default/objects/OW_business_configuration__c/fields/OW_annual_review_lead_time__c.field-meta.xml
<CustomField>
    <fullName>OW_annual_review_lead_time__c</fullName>
    <defaultValue>90</defaultValue>
    <description>The number of days in advance of a customer&#39;s annual review date that the annual review record should be created.</description>
    <inlineHelpText>How far in advance of a customer&#39;s annual review should the annual review record be created?</inlineHelpText>
    <label>Annual review lead time</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>