force-app/main/default/objects/OW_business_configuration__c/fields/OW_risk_score_expiry_time__c.field-meta.xml
<CustomField>
    <fullName>OW_risk_score_expiry_time__c</fullName>
    <description>The number of days after completion of an RTQ that it should be marked as out of date so as to require a new RTQ be completed by the customer.</description>
    <inlineHelpText>In days, how long after completing an RTQ should it be marked as out of date.</inlineHelpText>
    <label>Risk score expiry time</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>