force-app/main/default/objects/OW_business_configuration__c/fields/SippRegularDay__c.field-meta.xml
<CustomField>
    <fullName>SippRegularDay__c</fullName>
    <description>The day of the month which regulars to SIPPs are taken on</description>
    <label>SIPP Regular day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>